@@ -90,9 +90,9 @@ limitations under the License.
           <option>csv</option>
         </select>
 
-        <label for="indent" class="checkbox" title="Do not indent results.">
-          <input type="checkbox" ng-model="val['indent']" name="indent" id="indent" title="Do not indent results." ng-true-value="false" ng-false-value="true">
-          indent off
+        <label for="indent" class="checkbox" title="Enable indenting of results.">
+          <input type="checkbox" ng-model="val['indent']" name="indent" id="indent" title="Enable indenting of results." ng-true-value="true" ng-false-value="false">
+          indent on
         </label>
 
         </div>
